--- a/app/assets/stylesheets/static.css.erb
+++ b/app/assets/stylesheets/static.css.erb
@@ -63,7 +63,7 @@ a:active,a:hover,a:focus {
   font-style: italic;
   text-align: center;
   z-index: -1;
-  background-image: url('polygon1.jpg');
+  background-image: url(<%= image_url('polygon1.jpg') %>);
   background-position: center;
   background-repeat: no-repeat;
 }
